--- a/master/server/package.json
+++ b/master/server/package.json
@@ -2,8 +2,15 @@
   "name": "server",
   "version": "0.0.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
+  },
+  "jest": {
+    "testMatch": [
+      "**/*.test.js"
+    ]
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,5 +28,9 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
