--- a/master/server/package.json
+++ b/master/server/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "jest": {
     "testMatch": [
