--- a/master/server/package.json
+++ b/master/server/package.json
@@ -22,6 +22,7 @@
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
