--- a/master/client/package.json
+++ b/master/client/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "idb": "^8.0.0",
     "jsdom": "^24.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
